Fix manual test